--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ build-*/
 cmake-build-*/
 .cmake/
 
+# IDE and editor cache files
+.cache/
+.clangd
+.kiro/
+.specstory/
+
 # CMake generated files
 CMakeFiles/
 CMakeCache.txt
