Add project specification documents and remove build-specific files
- Copy design.md, requirements.md, and tasks.md from .kiro to docs/
- Remove CMakePresets.json, CMakeLists.txt.before_ide_fix, and fix_moc.sh from version control
- Update .gitignore to exclude these build-specific files

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ cmake-build-*/
 .kiro/
 .specstory/
 
+# Project specific files not for version control
+CMakePresets.json
+CMakeLists.txt.before_ide_fix
+fix_moc.sh
+
 # CMake generated files
 CMakeFiles/
 CMakeCache.txt
