--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ cmake-build-*/
 CMakePresets.json
 CMakeLists.txt.before_ide_fix
 fix_moc.sh
+compile_commands.json
 
 # CMake generated files
 CMakeFiles/
