feat: Major update - Add QtMyBatisHelper simplified API and complete demo project
New Features:
- Add QtMyBatisHelper static utility class with simplified API
- Complete demo_project education management system example
- New configuration format support and usage guide
- Comprehensive documentation system (debugging_guide, simplified_usage_guide, etc.)

Code Improvements:
- Optimize core component performance and stability
- Enhance exception handling and error management
- Improve cache management and connection pool functionality
- Perfect parameter handling and result mapping

Test Enhancements:
- Add QtMyBatisHelper related tests
- Add configuration format tests
- Improve integration test coverage

Documentation:
- Add simplified usage guide
- Add debugging guide and troubleshooting documentation
- Complete example project documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ set(SOURCES
     src/config/jsonconfigparser.cpp
     src/config/xmlmapperparser.cpp
     src/exception/qtmybatisexception.cpp
+    src/helper/qtmybatishelper.cpp
     src/qtmybatisorm.cpp
 )
 
@@ -140,7 +141,8 @@ set(HEADERS
     include/QtMyBatisORM/xmlmapperparser.h
     include/QtMyBatisORM/qtmybatisexception.h
     include/QtMyBatisORM/objectpool.h
-    include/QtMyBatisORM/DataModels.h
+    include/QtMyBatisORM/datamodels.h
+    include/QtMyBatisORM/qtmybatishelper.h
     include/QtMyBatisORM/qtmybatisorm.h
 )
 
